--- a/swav/swav.tex
+++ b/swav/swav.tex
@@ -4,14 +4,11 @@
 \usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{algorithmic}
-\usepackage[ruled, vlined]{algorithm2e}
 \usepackage{graphicx}
-\usepackage{pgfplots}
-\graphicspath{{../images}}
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage{verbatim}
-
+\usepackage{algorithm2e}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
